--- a/src/component/PlayerDetail.css
+++ b/src/component/PlayerDetail.css
@@ -2,6 +2,7 @@
   margin: 1em 10px;
   height: 250px;
   width: 95%;
+  border: 0.8px rgba(255, 255, 255, 0.288) solid;
   border-radius: 20px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
   background-color: #070613bd;
