--- a/src/component/TeamDetail.css
+++ b/src/component/TeamDetail.css
@@ -2,6 +2,7 @@
   margin: 4em auto 1em;
   height: 260px;
   width: 95%;
+  border: 0.8px rgba(255, 255, 255, 0.288) solid;
   border-radius: 20px;
   background-color: #070613bd;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
@@ -56,7 +57,7 @@
   font-size: 2em;
 }
 
-h2 {
+.team-detail-roster-title {
   margin-left: 20px;
 }
 
