--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -24,14 +24,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #2bddb4b4;
-  background-blend-mode: multiply;
   width: 100%;
   height: 65%;
   display: flex;
   flex-direction: column;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  text-shadow: 2px 2px 6px rgba(14, 13, 13, 0.555);
 }
 .header-1-1 {
   width: 100%;
