--- a/src/App.css
+++ b/src/App.css
@@ -117,333 +117,9 @@ table td {
   text-align: center;
 }
 
-.pendaftaran-title {
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 1.25em;
-}
-
-.namaPemain:hover,
-.namaPemain2:hover,
-.namaPemain3:hover,
-.namaPemain4:hover,
-.namaPemain5:hover,
-.idPemain:hover,
-.idPemain2:hover,
-.idPemain3:hover,
-.idPemain4:hover,
-.idPemain5:hover,
-.namaTeam:hover,
-.singkatanTeam:hover,
-.noHP_:hover,
-.email_:hover,
-select {
-  border: 2px solid #00deab;
-  transition: ease-in-out 0.3s;
-}
-.namaPemain:focus,
-.namaPemain2:focus,
-.namaPemain3:focus,
-.namaPemain4:focus,
-.namaPemain5:focus,
-.idPemain:focus,
-.idPemain2:focus,
-.idPemain3:focus,
-.idPemain4:focus,
-.idPemain5:focus,
-.namaTeam:focus,
-.singkatanTeam:focus,
-.noHP_:focus,
-.email_:focus,
-select {
-  border: 2px solid #00deab;
-  transition: ease-in-out 0.3s;
-}
-
-.namaPemain,
-.namaPemain2,
-.namaPemain3,
-.namaPemain4,
-.namaPemain5,
-.idPemain,
-.idPemain2,
-.idPemain3,
-.idPemain4,
-.idPemain5,
-.namaTeam,
-.singkatanTeam,
-.noHP_,
-.email_ {
-  border-radius: 10px;
-  background-color: #0e1013;
-  color: white;
-  width: 250px;
-  height: 40px;
-  text-align: left;
-  text-indent: 10px;
-  margin: 10px 5px;
-  border: 2px solid rgb(85, 85, 85);
-  outline: none;
-  transition: ease-in-out 0.3s;
-}
-
-.singkatanTeam {
-  text-transform: uppercase;
-}
-
-.err {
-  border: 2px solid red;
-}
-.err:hover {
-  border: 2px solid red;
-}
-
-.image-preview {
-  width: 80px;
-  margin: 15px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  color: white;
-}
-.image-preview-image {
-  display: none;
-  width: 100%;
-  margin: 0 auto;
-  margin-right: 40px;
-}
-
-input#logo {
-  color: transparent;
-}
-input#logo::-webkit-file-upload-button {
-  visibility: hidden;
-}
-input#logo::before {
-  content: "Klik untuk upload logo";
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 8px 0;
-  outline: none;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  cursor: pointer;
-  font-weight: 700;
-  font-size: 10pt;
-}
-
-.logotim {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.error {
-  font-size: 11px;
-  color: red;
-}
-.error-msg {
-  color: red;
-  font-size: 11px;
-  display: block;
-  margin: -10px 0 0;
-  padding: 0;
-  padding-left: 5px;
-  opacity: 0;
-}
-
-label {
-  display: block;
-  font-size: 14px;
-  margin-left: 7px;
-  margin-bottom: -40px;
-}
-
-.form {
-  background: #151a2c;
-  color: white;
-  padding: 70px 0;
-  margin: 0px auto;
-  transition: background-color 0.7s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.kiri {
-  background-color: #151a2c;
-  border-radius: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  margin: 0px 30px;
-  padding: 30px 0px;
-}
-
-.form p {
-  color: black;
-}
-
-.form li {
-  list-style: none;
-}
-
-.team-data {
-  margin-bottom: 2em;
-  /* width: 250px; */
-}
-
-#submit {
-  border-radius: 6px;
-  width: 250px;
-  height: 40px;
-  margin: 2em auto;
-  background-color: #00deab;
-  border: none;
-  border-radius: 50px;
-  font-size: 14px;
-  font-weight: bold;
-  cursor: pointer;
-  color: black;
-  transition: ease-in-out 0.3s;
-}
-
-#submit:hover {
-  background: rgb(4, 172, 132);
-}
-
-.logo-input-wraper {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: column;
-  width: 90%;
-  margin: 0 auto;
-}
-
-.logo-req {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-}
-
-.logo-req ul li {
-  list-style: circle;
-}
-
-.submit,
-.teamname,
-.abbrteam,
-.logotim,
-.id1,
-.player1,
-.id2,
-.player2,
-.id3,
-.player3,
-.id4,
-.player4,
-.id5,
-.player5,
-.noHP,
-.email {
-  display: inline-block;
-  margin: 0 auto;
-}
-
-@media screen and (max-width: 576px) {
-  /* Home */
-
-  h1 {
-    font-size: 3em;
-  }
-
-  /* ===============================================Registration===================================================== */
-
-  .team-data {
-    width: 250px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .logotim,
-  input#logo {
-    width: 250px;
-  }
-
-  .submit,
-  .teamname,
-  .abbrteam,
-  .logotim,
-  .id1,
-  .player1,
-  .id2,
-  .player2,
-  .id3,
-  .player3,
-  .id4,
-  .player4,
-  .id5,
-  .player5,
-  .noHP,
-  .email {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 576px) {
-  #submit {
-    width: 505px;
-  }
-}
-
 @media screen and (min-width: 700px) {
   p {
     font-size: 1em;
-  }
-  /* ===============================================Navbar===================================================== */
-
-  .tombolkembali {
-    top: 1em;
-    left: 1em;
-  }
-
-  .tombolkembali a img {
-    width: 32px;
-    color: #ffa500;
-  }
-
-  /* ===============================================Registration===================================================== */
-
-  .form {
-    background: #151a2c;
-    color: white;
-    padding: 70px 0;
-    margin: 0px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-    background-color: rgba(0, 0, 0, 0.4);
-    background-blend-mode: multiply;
-  }
-
-  .logo-input-wraper {
-    flex-direction: row;
   }
 }
 
@@ -465,6 +141,7 @@ label {
   }
 
   .main-content-wraper {
+    max-width: 1500px;
     margin-left: 200px;
   }
 
@@ -474,15 +151,5 @@ label {
     align-items: center;
     width: 350px;
     height: 50px;
-  }
-}
-
-@media screen and (min-width: 1140px) {
-  .form {
-    flex-direction: row;
-  }
-
-  .kiri {
-    width: 50%;
   }
 }
