--- a/src/component/Admin.css
+++ b/src/component/Admin.css
@@ -1,30 +1,30 @@
 .admin {
   margin-top: 4em;
   padding: 20px;
+  color: white;
 }
-
 .admin table {
+  border: 1px solid white;
   border-collapse: collapse;
-  border: 1px solid white;
 }
 
-.admin table tr td {
-  padding: 10px;
-  border: 1px solid white;
-}
-.admin table tr th {
+.admin table td,
+.admin table th {
   padding: 10px;
   border: 1px solid white;
 }
 
-.admin input {
-  width: 40px;
-  height: 30px;
-  outline: none;
-  border: none;
-  text-align: center;
+.admin table input {
+  width: 80px;
+  margin: 5px;
 }
 
+.admin table select {
+  width: 90px;
+}
+.pointInput {
+  display: flex;
+}
 .admin-teams {
   overflow: auto;
 }
@@ -32,44 +32,49 @@
   display: flex;
   justify-content: space-between;
 }
-.update_button {
-  background-color: #41c62a;
-  cursor: pointer;
-  font-weight: bold;
-  color: white;
-  outline: none;
-  border: none;
-  width: 70px;
-  height: 30px;
-  margin: 5px;
-  border-radius: 10px;
-}
-.delete_button {
-  background-color: #ec3f3f;
-  cursor: pointer;
-  font-weight: bold;
-  color: white;
-  outline: none;
-  border: none;
-  width: 70px;
-  height: 30px;
-  margin: 5px;
 
-  border-radius: 10px;
+.admin input:focus {
+  border: 2px solid #00deab;
+  transition: ease-in-out 0.3s;
 }
-.create-button {
-  background-color: #00dbae;
-  cursor: pointer;
-  font-weight: bold;
-  color: white;
-  outline: none;
-  border: none;
-  width: 70px;
-  height: 30px;
-  margin: 5px;
-  border-radius: 10px;
+.admin input:hover {
+  border: 2px solid #00deab;
+  transition: ease-in-out 0.3s;
 }
 
-.tournament_table input {
-  width: 150px;
+.admin input,
+.admin select {
+  border-radius: 10px;
+  background-color: #0e1013;
+  color: white;
+  width: 100%;
+  height: 40px;
+  text-align: left;
+  text-indent: 10px;
+  margin-bottom: 20px;
+  border: 2px solid rgb(85, 85, 85);
+  outline: none;
+  transition: ease-in-out 0.3s;
+}
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+}
+.editTournament,
+.createTournament {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: left;
+}
+
+@media screen and (min-width: 976px) {
+  .editTournament,
+  .createTournament {
+    width: 600px;
+  }
+  .admin input,
+  .admin select {
+    width: 400px;
+  }
 }
