--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -1,18 +1,27 @@
 .login {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+.login a {
+  color: #00deab;
+}
+
 .login_form {
   display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 4em auto 0;
   flex-direction: column;
-  justify-content: center;
-  margin: 3em auto;
+  align-items: center;
 }
 
 .login-title {
-  text-align: center;
+  width: 80%;
+  text-align: left;
 }
 .login-input:focus {
   border: 2px solid #00deab;
@@ -27,8 +36,8 @@
   border-radius: 10px;
   background-color: #0e1013;
   color: white;
-  width: 250px;
-  height: 40px;
+  width: 80%;
+  height: 50px;
   text-align: left;
   text-indent: 10px;
   margin: 10px auto;
@@ -37,26 +46,41 @@
   transition: ease-in-out 0.3s;
 }
 
+.login-button-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 1em;
+}
+
 .login-button {
   display: inline-block;
-  width: 250px;
-  height: 40px;
-  margin: 20px auto;
+  width: 80%;
+  height: 50px;
   padding: 11px 20px;
+  margin: 10px;
   font-size: 0.75em;
   border: none;
   font-weight: bold;
-  border-radius: 50px;
+  border-radius: 10px;
   background: #00deab;
   text-transform: uppercase;
   color: black;
   outline: none;
   transition: ease-in-out 0.3s;
   text-decoration: none;
+  cursor: pointer;
+}
+.login-button:hover {
+  background: rgb(4, 172, 132);
 }
 
 .login-error {
   border: 2px solid red;
+  text-align: left;
 }
 
 .error-msg {
@@ -67,4 +91,19 @@
   padding: 0;
   padding-left: 5px;
   opacity: 0;
+}
+
+@media screen and (min-width: 700px) {
+  .login_form {
+    width: 350px;
+  }
+
+  .login-button-container {
+    margin-top: 3em;
+    position: unset;
+    width: 350px;
+  }
+  .login-title {
+    text-align: center;
+  }
 }
