--- a/src/component/PlayerDetail.css
+++ b/src/component/PlayerDetail.css
@@ -1,22 +1,20 @@
 .team-detail-player {
   margin: 1em 10px;
-  height: 250px;
+  height: 230px;
   width: 95%;
-  border: 0.8px rgba(255, 255, 255, 0.288) solid;
   border-radius: 20px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
-  background-color: #070613bd;
+  background-color: #070613;
   color: white;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
 }
 
 .team-detail-player-name {
-  padding: 20px;
-  height: 100%;
+  padding-left: 20px;
+  height: 25%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -34,10 +32,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 75%;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  background-color: #151a2c;
+  background-color: #2d303e;
 }
 
 .team-detail-player-details-top {
@@ -65,7 +63,7 @@
   font-size: 2em;
 }
 
-@media screen and (min-width: 976px) {
+@media screen and (min-width: 700px) {
   .team-detail-player {
     width: 300px;
     margin-left: 2em;
