--- a/src/component/Admin.css
+++ b/src/component/Admin.css
@@ -68,6 +68,19 @@
   justify-content: left;
 }
 
+.admin-link {
+  width: fit-content;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  background-color: #00deab;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 5px;
+  margin-bottom: 1em;
+}
 @media screen and (min-width: 976px) {
   .editTournament,
   .createTournament {
