--- a/src/component/PlayerDetail.css
+++ b/src/component/PlayerDetail.css
@@ -1,15 +1,15 @@
 .team-detail-player {
-  margin: 1em 10px;
+  margin: 10px 10px;
   height: 230px;
-  width: 95%;
-  border-radius: 20px;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
+  width: 100%;
+  border-radius: 10px;
   background-color: #070613;
   color: white;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
 }
 
 .team-detail-player-name {
@@ -33,8 +33,8 @@
   flex-direction: column;
   justify-content: center;
   height: 75%;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   background-color: #2d303e;
 }
 
@@ -56,16 +56,16 @@
 
 .team-detail-player-detail span:first-child {
   font-size: 0.9em;
+  font-weight: normal;
 }
 .team-detail-player-detail span:last-child {
-  margin-top: -20px;
   font-weight: bold;
+  margin-top: -20px;
   font-size: 2em;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 800px) {
   .team-detail-player {
-    width: 300px;
-    margin-left: 2em;
+    width: 350px;
   }
 }
