--- a/src/component/Registration.css
+++ b/src/component/Registration.css
@@ -64,7 +64,7 @@
   height: 50px;
   text-align: left;
   text-indent: 10px;
-  margin: 10px 5px;
+  margin: 10px auto;
   border: 2px solid rgb(85, 85, 85);
   outline: none;
   transition: ease-in-out 0.3s;
