--- a/src/component/TournamentTeam.css
+++ b/src/component/TournamentTeam.css
@@ -26,6 +26,7 @@
 }
 .team-detail-info {
   display: flex;
+  width: 100%;
   align-items: center;
 }
 
@@ -45,42 +46,39 @@
   font-size: 2em;
 }
 
-.team-detail-roster-title {
-  text-align: center;
-  margin-top: -4em;
-}
-
 .team-detail-roster {
   display: flex;
   flex-wrap: wrap;
-  margin: -1em 0 0;
+  margin: -4em 0 1em;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 800px) {
   .team-detail {
-    width: 350px;
+    flex-direction: row;
+    width: 96%;
     height: 250px;
-    border-radius: 20px;
-    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
-    border-bottom: none;
-    margin-top: 5em;
-    margin-left: 2em;
-    justify-content: center;
-    align-self: center;
+    margin: 5em auto 0;
     background: none !important;
   }
 
   .team-detail-logo {
     margin: 10px;
-    width: 100px;
+    width: 150px;
   }
 
-  .team-detail-roster-title {
-    text-align: unset;
-    margin-left: 20px;
-    margin-top: 0;
+  .team-detail-identity {
+    flex-direction: row;
+    width: 50%;
   }
+
   .team-detail-roster {
-    margin: 0;
+    width: 96%;
+    margin: 0 auto 1em;
+  }
+  .team-detail-info {
+    width: 30%;
+  }
+  .team-detail-team-name {
+    font-size: 2.5;
   }
 }
