add hero, fix some issues

--- a/src/component/Overview.css
+++ b/src/component/Overview.css
@@ -1,22 +1,26 @@
-.schedule {
+.overview {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin: 20px auto 0;
   width: 90%;
   color: white;
   overflow: auto;
 }
-.schedule table {
+
+.overview span {
+  display: block;
+  font-size: 14px;
+}
+.overview table {
   overflow: auto;
   width: 100%;
   margin: auto;
   font-size: 14px;
   border-spacing: 0rem 0.6rem;
   border-collapse: separate;
+  margin-bottom: 20px;
 }
-.schedule table tbody tr {
+.overview table tbody tr {
   color: white;
   font-size: 14px;
   position: relative;
@@ -27,17 +31,34 @@
   z-index: 1;
 }
 
-.schedule table tbody td {
+.overview table tbody td {
   padding: 10px;
   text-align: center;
   border-top: 0.8px rgba(255, 255, 255, 0.288) solid;
   border-bottom: 0.8px rgba(255, 255, 255, 0.288) solid;
 }
 
-.schedule table tbody td:first-child {
+.overview table tbody td:first-child {
   border-left: 0.8px rgba(255, 255, 255, 0.288) solid;
 }
 
-.schedule table tbody td:last-child {
+.overview table tbody td:last-child {
   border-right: 0.8px rgba(255, 255, 255, 0.288) solid;
+}
+
+.overview-information {
+  margin-bottom: 20px;
+}
+.overview-information ul li {
+  font-size: 14px;
+}
+.overview-report {
+  margin-bottom: 20px;
+}
+.overview a {
+  font-size: 14px;
+  color: #00dbae;
+}
+.overview-admin {
+  margin-bottom: 20px;
 }
