--- a/src/component/SideBar.css
+++ b/src/component/SideBar.css
@@ -12,6 +12,7 @@
   z-index: 4;
   font-weight: bold;
   overflow-y: auto;
+  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.4);
 }
 
 .side-bar.active {
