--- a/src/component/Profile.css
+++ b/src/component/Profile.css
@@ -1,20 +1,25 @@
 .profile {
-  margin: 4em auto 1em;
+  margin: 3em auto 1em;
   height: 260px;
-  width: 95%;
-  border-radius: 10px;
   background-color: #151a2c;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.712);
   color: white;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(17, 18, 23, 0)),
+    to(#111217)
+  );
+  background: linear-gradient(#070613, #151a2c);
 }
 
 @media screen and (min-width: 976px) {
   .profile {
-    margin: 5em auto 1em;
+    margin: 3.7em auto 1em;
   }
 }
