--- a/src/component/Signup.css
+++ b/src/component/Signup.css
@@ -35,7 +35,7 @@
   border-radius: 10px;
   background-color: #0e1013;
   color: white;
-  width: 80%;
+  width: 90%;
   height: 50px;
   text-align: left;
   text-indent: 10px;
@@ -51,13 +51,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 1em;
+  margin-top: 4em;
 }
 
 .signup-button {
   display: inline-block;
-  width: 80%;
+  width: 90%;
   height: 50px;
   margin: 10px;
   padding: 11px 20px;
